<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Music</string>
    <string name="hello_world">Hello world!</string>

    <!-- Menu -->
    <string name="menu_settings">Ajustes</string>
    <string name="menu_friends">Amigos</string>
    <string name="menu_music">Mi Música</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="btn_login">Acceder</string>
    <string name="label_login">Iniciar Sesión</string>
    <string name="label_register">Registrarse</string>
    <string name="btn_register">Registrarse</string>
    <string name="label_user">Usuario</string>
    <string name="label_pswd">Contraseña</string>
    <string name="label_pswd_repeat">Repita su Contraseña</string>
    <string name="title_activity_search_song">SearchSong</string>
    <string name="title_activity_add_friend">Añadir Amigo</string>
    <string name="action_settings">Settings</string>

</resources>